@@ -16,6 +16,8 @@
         <setting type="lsep" label="30029" />
         <setting id="clear_cache" label="33011" type="action" action="RunPlugin(plugin://plugin.video.cumination/?mode=utils.clear_cache)"/>
         <setting id="cache_time" label="30030" type="slider" default="4" range="1,1,8" option="int" />
+        <setting type="lsep" label="30031" />
+        <setting id="clear_cookies" label="30032" type="action" action="RunPlugin(plugin://plugin.video.cumination/?mode=utils.clear_cookies)"/>
     </category>
     <category label="30053">
         <setting id="qualityask" type="enum" label="30001" lvalues="30401|30402|30403|30404|30405" default="0" />
